5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4007/executions/1616_2941.log
== TEST (2019-04-01 14:10:56) 
-- CODE:
vf = float(input("x"))
v1 = float(input("y"))
j = float(10%)
n = 10


-- ERROR:
File "XXXX", line 3
    j = float(10%)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:11:14) 
-- CODE:
vf = float(input("x"))
v1 = float(input("y"))
j = 10%
n = 10


-- ERROR:
File "XXXX", line 3
    j = 10%
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:15:14) 
-- CODE:
vf = float(input("qual o valor final?"))
v1 = float(input("qual o valor inicial?"))



-- ERROR:
File "XXXX", line 3
    j = 10%
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:16:33) 
-- CODE:
vf = float(input("qual o valor final?"))
v1 = float(input("qual o valor inicial?"))
j = 10/100


-- ERROR:
File "XXXX", line 3
    j = 10%
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:17:08) 
-- CODE:
vf = float(input("qual o valor final?"))
v1 = float(input("qual o valor inicial?"))
j = 10/100
n = 12 



-- ERROR:
File "XXXX", line 3
    j = 10%
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:19:23) 
-- CODE:
vf = float(input("qual o valor final?"))
v1 = float(input("qual o valor inicial?"))
j = 10/100
n = 12 
print(vf = v1*(1+j)**n)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(vf = v1*(1+j)**n)
TypeError: 'vf' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:20:34) 
-- CODE:
vf = float(input("qual o valor final?"))
v1 = float(input("qual o valor inicial?"))
j = 10/100
n = 12 
print


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(vf = v1*(1+j)**n)
TypeError: 'vf' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:21:29) 
-- CODE:
v = float(input("qual o valor final?"))
v2 = float(input("qual o valor inicial?"))
j = 10/100
n = 12 
print(v=v2*(1+j)**n)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(v=v2*(1+j)**n)
TypeError: 'v' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:24:04) 
-- CODE:
v = float(input("qual o valor final?"))
v2 = float(input("qual o valor inicial?"))
j = 10/100
n = 12 
print(



-- ERROR:
File "XXXX", line 8
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:24:11) 
-- CODE:
v = float(input("qual o valor final?"))
v2 = float(input("qual o valor inicial?"))
j = 10/100
n = 12 
print(
-- ERROR:
File "XXXX", line 6
    
          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:28:33) 
-- CODE:
v = float(input("qual o valor final?"))
v2 = float(input("qual o valor inicial?"))

n = 12 


-- ERROR:
File "XXXX", line 6
    
          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:31:14) 
-- CODE:
vf = float(input("qual o valor final?"))
vi = float(input("qual o valor inicial?"))
j = 0.25
n = 12 
vf = vi*(1+j)**n


-- ERROR:
File "XXXX", line 6
    
          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:31:27) 
-- CODE:
vf = float(input("qual o valor final?"))
vi = float(input("qual o valor inicial?"))
j = 0.25
n = 12 
vf = vi*(1+j)**n


-- ERROR:
File "XXXX", line 6
    
          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:32:22) 
-- CODE:
vf = (x)
vi = float(input("qual o valor inicial?"))
j = 0.25
n = 12 
vf = vi*(1+j)**n


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vf = (x)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:32:38) 
-- CODE:
vf = ("x")
vi = float(input("qual o valor inicial?"))
j = 0.25
n = 12 
vf = vi*(1+j)**n


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vf = (x)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:32:51) 
-- CODE:
vf = ("x")
vi = float(input("qual o valor inicial?"))
j = 0.25
n = 12 
vf = vi*(1+j)**n


-- EXECUTION TIME:
0.209196
-- TEST CASE 1:
---- input:
20000
0.009
24
---- correct output:
24798.08
---- user output:

-- TEST CASE 2:
---- input:
10000
0.008
36
---- correct output:
13322.3
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:37:45) 
-- CODE:
vf = x
v1 = 1000
j = 0.1
n = 12
print("x=")



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vf = x
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:37:58) 
-- CODE:
vf = ("x")
v1 = 1000
j = 0.1
n = 12
print("x=")



-- OUTPUT:
x=
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:38:32) 
-- CODE:
vf = ("x")
v1 = 1000
j = 0.1
n = 12
print("x=vf*(1+j)**n")



-- OUTPUT:
x=vf*(1+j)**n
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:39:01) 
-- CODE:
vf = ("x")
v1 = 1000
j = 0.1
n = 12
print("x=vf*(1+j)**n")
print(round(x, 2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(x, 2))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:39:30) 
-- CODE:
vf = ("x")
v1 = 1000
j = 0.1
n = 12
print("x=vf*(1+j)**n")



-- OUTPUT:
x=vf*(1+j)**n
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:39:51) 
-- CODE:
vf = ("x")
v1 = 1000
j = 0.1
n = 12
print("vf*(1+j)**n")



-- OUTPUT:
vf*(1+j)**n
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:40:12) 
-- CODE:
vf = ("x")
v1 = 1000
j = 0.1
n = 12
print(input(("vf*(1+j)**n"))



-- ERROR:
File "XXXX", line 8
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:40:22) 
-- CODE:
vf = ("x")
v1 = 1000
j = 0.1
n = 12
print(input(("vf*(1+j)**n"))

-- ERROR:
File "XXXX", line 6
    
                                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:40:24) 
-- CODE:
vf = ("x")
v1 = 1000
j = 0.1
n = 12
print(input(("vf*(1+j)**n"))

-- ERROR:
File "XXXX", line 6
    
                                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:40:31) 
-- CODE:
vf = ("x")
v1 = 1000
j = 0.1
n = 12
print(input(("vf*(1+j)**n"))
-- ERROR:
File "XXXX", line 6
    
                                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:41:03) 
-- CODE:
vf = ("x")
v1 = 1000
j = 0.01
n = 12
print("vf*(1+j)**n")
-- OUTPUT:
vf*(1+j)**n
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:42:41) 
-- CODE:
vf = ("x")
v1 = 1000
j = 0.01
n = 12
print vf*(1+j)**n
-- ERROR:
File "XXXX", line 5
    print vf*(1+j)**n
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:42:44) 
-- CODE:
vf = ("x")
v1 = 1000
j = 0.01
n = 12
print vf*(1+j)**n
-- ERROR:
File "XXXX", line 5
    print vf*(1+j)**n
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:43:14) 
-- CODE:
vf = ("x")
v1 = 1000
j = 0.01
n = 12
print(round(vf, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(vf, 2))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:43:24) 
-- CODE:
vf = ("x")
v1 = 1000
j = 0.01
n = 12
print(round(x, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(x, 2))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:43:29) 
-- CODE:
vf = ("x")
v1 = 1000
j = 0.01
n = 12
print(round(x, 2)
-- ERROR:
File "XXXX", line 6
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:44:49) 
-- CODE:
vf = (x)
v1 = 1000
j = 0.01
n = 12

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vf = (x)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:45:06) 
-- CODE:
vf = ("x")
v1 = 1000
j = 0.01
n = 12

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vf = (x)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:46:48) 
-- CODE:
vf = ("x")
v1 = 1000
j = 0.01
n = 12
x = v1*(1+j)**n

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    vf = (x)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:46:53) 
-- CODE:
vf = ("x")
v1 = 1000
j = 0.01
n = 12
x = v1*(1+j)**n

-- EXECUTION TIME:
0.158603
-- TEST CASE 1:
---- input:
20000
0.009
24
---- correct output:
24798.08
---- user output:

-- TEST CASE 2:
---- input:
10000
0.008
36
---- correct output:
13322.3
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:47:24) 
-- CODE:
vf = ("x")
v1 = 1000
j = 0.01
n = 12
x = v1*(1+j)**n
print(round(x, 2))
-- OUTPUT:
1126.83
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:47:44) 
-- CODE:
vf = ("x")
v1 = 1000
j = 0.01
n = 12
x = v1*(1+j)**n
print(round(x, 2))
-- EXECUTION TIME:
0.205848
-- TEST CASE 1:
---- input:
20000
0.009
24
---- correct output:
24798.08
---- user output:
1126.83
-- TEST CASE 2:
---- input:
10000
0.008
36
---- correct output:
13322.3
---- user output:
1126.83
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:48:14) 
-- CODE:
vf = ("x")
v1 = 10000
j = 0.01
n = 12
x = v1*(1+j)**n
print(round(x, 2))
-- OUTPUT:
11268.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:48:23) 
-- CODE:
vf = ("x")
v1 = 10000
j = 0.01
n = 12
x = v1*(1+j)**n
print(round(x, 2))
-- EXECUTION TIME:
0.142633
-- TEST CASE 1:
---- input:
20000
0.009
24
---- correct output:
24798.08
---- user output:
11268.25
-- TEST CASE 2:
---- input:
10000
0.008
36
---- correct output:
13322.3
---- user output:
11268.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:48:26) 
-- CODE:
vf = ("x")
v1 = 10000
j = 0.01
n = 12
x = v1*(1+j)**n
print(round(x, 2))
-- OUTPUT:
11268.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:49:52) 
-- CODE:
vf = ("x")
v1 = 10000
j = float(0.01)
n = 12
print(float("x = v1*(1+j)**n: ")
print(round(x, 2))
-- ERROR:
File "XXXX", line 6
    print(round(x, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:50:10) 
-- CODE:
vf = ("x")
v1 = 10000
j = float(0.01)
n = 12
print("x = v1*(1+j)**n: ")
print(round(x, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(x, 2))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:50:21) 
-- CODE:
vf = ("x")
v1 = 10000
j = float(0.01)
n = 12
print("x = v1*(1+j)**n: ")
round(x, 2))
-- ERROR:
File "XXXX", line 6
    round(x, 2))
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:50:27) 
-- CODE:
vf = ("x")
v1 = 10000
j = float(0.01)
n = 12
print("x = v1*(1+j)**n: ")
round(x, 2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    round(x, 2)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:51:04) 
-- CODE:
vf = ("x")
v1 = 10000
j = float(0.01)
n = 12
x = v1*(1+j)**n: 
round(x, 2)
-- ERROR:
File "XXXX", line 5
    x = v1*(1+j)**n: 
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:51:25) 
-- CODE:
vf = ("x")
v1 = 10000
j = float(0.01)
n = 12
x = v1*(1+j)**n: 
print(round(x, 2))
-- ERROR:
File "XXXX", line 5
    x = v1*(1+j)**n: 
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:51:37) 
-- CODE:
vf = ("x")
v1 = 10000
j = float(0.01)
n = 12
x = v1*(1+j)**n
print(round(x, 2))
-- OUTPUT:
11268.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:51:39) 
-- CODE:
vf = ("x")
v1 = 10000
j = float(0.01)
n = 12
x = v1*(1+j)**n
print(round(x, 2))
-- EXECUTION TIME:
0.184559
-- TEST CASE 1:
---- input:
20000
0.009
24
---- correct output:
24798.08
---- user output:
11268.25
-- TEST CASE 2:
---- input:
10000
0.008
36
---- correct output:
13322.3
---- user output:
11268.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:51:40) 
-- CODE:
vf = ("x")
v1 = 10000
j = float(0.01)
n = 12
x = v1*(1+j)**n
print(round(x, 2))
-- OUTPUT:
11268.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:51:59) 
-- CODE:
vf = ("x")
v1 = 10000
j = float(0.01)
n = 12
print(x = v1*(1+j)**n)
print(round(x, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(x = v1*(1+j)**n)
TypeError: 'x' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:52:20) 
-- CODE:
vf = ("x")
v1 = 10000
j = float(0.01)
n = 12
print(float(x = v1*(1+j)**n))
print(round(x, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(round(x, 2))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:52:39) 
-- CODE:
vf = ("x")
v1 = 10000
j = float(0.01)
n = 12
x = v1*(1+j)**n
print(round(x, 2))
-- OUTPUT:
11268.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:53:00) 
-- CODE:
vf = "x"
v1 = 10000
j = float(0.01)
n = 12
x = v1*(1+j)**n
print(round(x, 2))
-- OUTPUT:
11268.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:53:03) 
-- CODE:
vf = "x"
v1 = 10000
j = float(0.01)
n = 12
x = v1*(1+j)**n
print(round(x, 2))
-- EXECUTION TIME:
0.202892
-- TEST CASE 1:
---- input:
20000
0.009
24
---- correct output:
24798.08
---- user output:
11268.25
-- TEST CASE 2:
---- input:
10000
0.008
36
---- correct output:
13322.3
---- user output:
11268.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:53:25) 
-- CODE:
vf = "x"
v1 = 10000
j = float(0.01)
n = 12
x = v1*(1+j)**n
print(round(x, 2))
-- OUTPUT:
11268.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-25 12:40:08) 
-- CODE:
vf = float(input("valor final?"))
v1 = float(input("valor iniu"))
j = float(0.01)
n = 12
x = v1*(1+j)**n
print(round(x, 2))
-- OUTPUT:
0.01
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
